--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "auto",
             "program": "/Users/mhenkel/go/src/github.com/michaelhenkel/ckube/main.go",
             "env": {},
-            "args": ["cluster","test2","add","master","master1"]
+            "args": ["cluster","test2","add","master","bla"]
         }
     ]
 }
