--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,16 @@
             "mode": "auto",
             "program": "/Users/mhenkel/go/src/github.com/michaelhenkel/ckube/main.go",
             "env": {},
-            "args": ["cluster","cluster1","add","tunnel", "-u", "mhenkel","dscf"]
+            "args": ["cluster","cluster1","add","master","-x","-v","vpnkit","master1"]
+        },
+        {
+            "name": "delete cluster bla",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "/Users/mhenkel/go/src/github.com/michaelhenkel/ckube/main.go",
+            "env": {},
+            "args": ["cluster","cluster1","delete"]
         }
     ]
 }
